<resources>
    <string name="app_name">Cadastro de Clientes</string>
    <string name="nome">Nome</string>
    <string name="layout_email">Email</string>
    <string name="layout_cidade">Cidade</string>
    <string name="observacao">Observação</string>
    <string name="password">Senha</string>

    <string-array name="states">
        <item>"*Estado"</item>
        <item>"Acre (AC)"</item>
        <item>"Alagoas (AL)"</item>
        <item>"Amapá (AP)"</item>
        <item>"Amazonas (AM)"</item>
        <item>"Bahia (BA)"</item>
        <item>"Ceará (CE)"</item>
        <item>"Distrito Federal (DF)"</item>
        <item>"Espírito Santo (ES)"</item>
        <item>"Goiás (GO)"</item>
        <item>"Maranhão (MA)"</item>
        <item>"Mato Grosso (MT)"</item>
        <item>"Mato Grosso do Sul (MS)"</item>
        <item>"Minas Gerais (MG)"</item>
        <item>"Pará (PA)"</item>
        <item>"Paraíba (PB)"</item>
        <item>"Paraná (PR)"</item>
        <item>"Pernambuco (PE)"</item>
        <item>"Piauí (PI)"</item>
        <item>"Rio de Janeiro (RJ)"</item>
        <item>"Rio Grande do Norte (RN)"</item>
        <item>"Rio Grande do Sul (RS)"</item>
        <item>"Rondônia (RO)"</item>
        <item>"Roraima (RR)"</item>
        <item>"Santa Catarina (SC)"</item>
        <item>"São Paulo (SP)"</item>
        <item>"Sergipe (SE)"</item>
        <item>"Tocantins (TO)"</item>
    </string-array>
</resources>